changed an image

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <img class="img" src="./images/20230118_132720.jpg" alt="img2" />
             <img class="img" src="./images/20230302_132154.jpg" alt="img3" />
             <img class="img" src="./images/20230302_133215.jpg" alt="img4" />
-            <img class="img" src="./images/DSC_0104.jpg" alt="img5" />
+            <img class="img" src="./images/20230131_124305 (2).jpg" alt="img5" />
           </div>
           <div id="myModal" class="modal">
             <img class="modal-content">
